# applications_launcher

./: .gitignore  NOTICE  OAT.xml  README.OpenSource  README.en.md  README.md  README_zh.md  UPDATE_TTERATION.md  build-profile.json5  build.gradle  bundle.json  hisysevent.yaml  hvigorfile.js  hvigorw  local.properties  oh-package.json5  package-lock.json  package.json  settings.gradle
AppScope/: app.json5
launcher/: BUILD.gn  build.gradle
launcher/src/main/: config.json
launcher/src/main/js/default/: app.js
launcher/src/main/js/default/common/cache/: AppListInfoCacheManager.js  AppResourceCacheManager.js  DiskLruCache.js  DiskLruFileUtils.js  LruCache.js
launcher/src/main/js/default/common/colors/: Colors.js
launcher/src/main/js/default/common/configs/: DefaultLayoutConfig.js  GridLayoutConfigs.js  SystemApplication.js
launcher/src/main/js/default/common/constants/: EventConstants.js  LayoutConstants.js  PageData.js
launcher/src/main/js/default/common/css/: CommonPageStyle.css
launcher/src/main/js/default/common/model/: AppModel.js  ILayoutConfig.js  LayoutConfigManager.js  MMIEventManager.js  MMIModel.js  ResourceManager.js  SettingsModel.js  StorageLayoutConfig.js
launcher/src/main/js/default/common/utils/: CheckEmptyUtils.js  FileUtils.js  Pinyin.js  PinyinSort.js  RouterUtil.js
launcher/src/main/js/default/i18n/: en-US.json  zh-CN.json
launcher/src/main/js/default/resources/: res-hdpi.json  res-xxhdpi.json  res-xxxhdpi.json
launcher/src/main/resources/base/element/: string.json
launcher/src/main/resources/rawfile/: layoutInfo.json
(+575 files in other folders)
