# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_hap("ark_launcher") {
  hap_profile = "src/main/config.json"
  deps = [
    ":launcher_js_assets",
    ":launcher_resources",
  ]
  js2abc = false
  shared_libraries = [ "//third_party/libpng:libpng" ]
  certificate_profile = "../signature/launcher.p7b"
  hap_name = "ark_launcher"
  part_name = "prebuilt_hap"
  subsystem_name = "applications"
}

ohos_js_assets("launcher_js_assets") {
  source_dir = "src/main/js/default"
}

ohos_resources("launcher_resources") {
  sources = [ "src/main/resources" ]
  hap_profile = "src/main/config.json"
}
